@@ -6,6 +6,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.RecommendationGrpcClient;
 import ru.practicum.dto.eventDto.EventState;
 import ru.practicum.dto.eventDto.UpdateEventAdminRequest;
 import ru.practicum.event.mapper.LocationMapper;
@@ -17,11 +18,11 @@ import ru.practicum.event.service.AdminEventService;
 import ru.practicum.exception.ConditionsNotMetException;
 import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
-import ru.practicum.stat.client.StatsClient;
-import ru.practicum.stat.dto.ViewStatsDto;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -31,7 +32,7 @@ public class AdminEventServiceImpl implements AdminEventService {
 
     private final EventRepository eventRepository;
     private final CategoryRepository categoryRepository;
-    private final StatsClient statsClient;
+    private final RecommendationGrpcClient recommendationGrpcClient;
 
     @Override
     public List<Event> getAdminEvents(List<Long> users, List<EventState> states, List<Long> categories,
@@ -55,12 +56,28 @@ public class AdminEventServiceImpl implements AdminEventService {
     }
 
     @Override
-    public Long getViewsForEvent(Event event) {
-        if (event == null) return 0L;
-        LocalDateTime start = event.getPublishedOn() != null ? event.getPublishedOn() : event.getCreatedOn();
-        if (start == null) start = LocalDateTime.now().minusYears(10);
-        List<ViewStatsDto> stats = statsClient.getStats(start, LocalDateTime.now(), List.of("/events/" + event.getId()), true);
-        return stats.isEmpty() ? 0L : stats.getFirst().getHits();
+    public Double getRatingForEvent(Event event) {
+        if (event == null) return 0.0;
+        List<Long> eventIds = List.of(event.getId());
+        var protoList = recommendationGrpcClient.getInteractionsCount(eventIds);
+        return protoList.isEmpty() ? 0.0 : protoList.get(0).getScore();
+    }
+
+    @Override
+    public Map<Long, Double> getRatingsForEvents(List<Event> events) {
+        if (events == null || events.isEmpty()) return Map.of();
+        List<Long> eventIds = events.stream().map(Event::getId).collect(Collectors.toList());
+        try {
+            var protoList = recommendationGrpcClient.getInteractionsCount(eventIds);
+            return protoList.stream()
+                    .collect(Collectors.toMap(
+                            proto -> proto.getEventId(),
+                            proto -> proto.getScore()
+                    ));
+        } catch (Exception e) {
+            log.warn("Не удалось получить рейтинги для событий: {}", e.getMessage());
+            return Map.of();
+        }
     }
 
     private Event findEventById(Long eventId) {
